--- a/public/main.css
+++ b/public/main.css
@@ -25,18 +25,31 @@ button :hover{
     cursor: pointer;
 }
 
-#locator-button{
+.locator-button{
     position: absolute;
-    margin-top: 12px;
-    right: 0;
-    margin-right: 8vw;
+    margin-top: 13px;
+    margin-right: 6%;
+    right: 4%;
+    width: 10px;
+    height: 10px;
+    border: 4px solid rgb(162, 162, 162);
+    border-radius: 50%;
 }
 
 
 .loading {
-    background-color: #7c75e3;
-    color: #7c75e3;
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid rgb(162, 162, 162);
+    border-radius: 50%;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+
 }
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 
 .location-button{
     width: 20px;
@@ -56,7 +69,7 @@ button :hover{
     font-weight: lighter;
 }
 
-.filter{
+.filter-section{
     width: 92%;
     border-color: rgba(255, 255, 255, 0);
     border-radius: 10px;
@@ -98,7 +111,7 @@ button :hover{
     height: 8px;
 }
 
-.container{
+.filters{
     margin-top: -10px;
 }
 
@@ -132,18 +145,14 @@ input:checked + .toggle1{
     padding-top: 5px;
 }
 
-.type{
-    font-size: 15px;
-    font-weight: lighter;
-    margin-top: -22px;
-    margin-left: 55%;
-    margin-bottom: 2px;
-}
-
 .emoji{
-    margin-left: 57%;
-    font-size: 25px;
-    margin-bottom: -39px;
+    position: absolute;
+    margin-left: 49%;
+    font-size: 75%;
+    margin-top: 5px;
+
+    font-weight: lighter;
+    color: rgb(99, 99, 99);
 }
 
 .delivery-area{
@@ -168,6 +177,7 @@ input:checked + .toggle1{
     width: 20px;
     position: absolute;
     margin-left: 75%;
+    margin-top: -3px;
 }
 
 .business{
@@ -225,6 +235,7 @@ input:checked + .toggle1{
         right: 0;
         margin-right: 20%;
     }
+
 }
 
 @media(min-width: 1750px){
@@ -234,5 +245,11 @@ input:checked + .toggle1{
         margin-top: 12px;
         right: 0;
         margin-right: 30%;
+    }
+}
+
+@media(min-width: 1000px){
+    .emoji{
+        left: 200px;
     }
 }
